Fix overflow on Sidebar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,3 +28,7 @@
     box-shadow: 0 0 5px 4px rgba(236, 72, 153);
   }
 }
+
+.hidden-scroll::-webkit-scrollbar {
+  display: none;
+}
